@startuml

entity LICENSE_SPDX {
<<from result_shared>>
* id: SERIAL
}

entity RULE_VIOLATION {
* id: SERIAL
--
* fkEvaluatorRun: INT
* rule: VARCHAR(128)
* pkgType: VARCHAR(32)
pkgNamespace: VARCHAR(256)
pkgName: VARCHAR(256)
pkgVersion: VARCHAR(64)
fkLicense: INT
licenseSource: INT
severity: INT
* message: TEXT
* howToFix: TEXT
}

entity EVALUATOR_RUN {
* id: INT
--
* startTime: TIMESTAMP
* endTime: TIMESTAMP
* fkRun: INT
}

RULE_VIOLATION::fkLicense -- LICENSE_SPDX::id
RULE_VIOLATION::fkEvaluatorRun -- EVALUATOR_RUN::id
@enduml
